Made more edits for CSS and HTML. Most alignment issues fixed.

--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@ body{
 
 }
 
+
+
 .header{
     display: flex;
     background-color: #1f2937;
     flex-direction: row;
     justify-content: space-between;
 
-    font-size: 24px;
+    font-size: 24px #f9faf8;
     font-weight:bold;
     color: #E5E7EB;
+
+    margin: 0%;
     
 }
 
@@ -27,10 +31,13 @@ ol{
     font-size: 18px;
     color: #E5E7EB;
 
+    margin: 0px;
+
 }
 
-.card-1{
+.card-1,img{
     background-color: #1f2937;
+    
 }
 
 .card-1-title{
@@ -43,6 +50,18 @@ ol{
     font-size: 18px;
     color: #E5E7EB;
 }
+
+
+div.card-1-image{
+    height: 300px;
+    width: 200px;
+    
+    display:flex;
+    justify-content:flex-end;
+    
+    
+}
+
 
 .card-2{
     display: flex;
@@ -123,38 +142,41 @@ button{
     display: flex;
     flex-direction: column;
     background-color: blueviolet;
-    height:100px;
+    height:100%;
     justify-content: center;
     align-items: center;
     
 }
 
+.card-5-bubble{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    border-radius: 10px;
+    margin: 15px;
+    padding: 10px;
+    
+}
+
 .card-5-sign-up{
-    font-weight: bold;
+    color:#fff;
 }
 
-.card-5-sign-up,
-.card-5-sign-up-subtext,
-.sign-up-button{
+.container button{
+    display: flex;
+    border:#fff 2px solid;
     
-    color: #E5E7EB;
-    background-color:#3882f6;
-    
-   
-
-    width: 50%;
-    height: 50%;
-    margin: auto;
-    border: 2px red;
-    
-}
-
-.sign-up-button{
-    border: #E5E7EB;
 
 }
 
 .footer{
     background-color: #1f2937;
     color: #E5E7EB;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
 }
